--- a/src/shared/components/features-section/index.module.css
+++ b/src/shared/components/features-section/index.module.css
@@ -45,7 +45,17 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+
+      & .featuresItem {
+        width: calc(25% - 25px);
+      }
     }
+  }
+}
+
+@media (--layout-lte-medium) {
+  .container .content .featuresContainer .featuresItem {
+    width: calc(33.3% - 25px);
   }
 }
 
@@ -53,8 +63,19 @@
   .container .content {
     width: var(--container-width-mobile);
 
+    & .featuresContainer .featuresItem {
+      width: calc(50% - 15px);
+    }
+
     & .sectionDescription p {
       width: 95%;
     }
+  }
+}
+
+@media (--layout-lte-xsmall) {
+  .container .content .featuresContainer .featuresItem {
+    width: 100%;
+    padding: 0 30px;
   }
 }
